2003-10-29  Chris Toshok  <toshok@ximian.com>

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: add the
	S/MIME config control here.

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* backend/ebook/e-book-listener.c (e_book_listener_new): change
	the poa hint to PER_REQUEST.  fixes a couple of deadlocks.

2003-10-29  Chris Toshok  <toshok@ximian.com>

	* gui/component/component-factory.c (factory): ifdef the smime
	code with HAVE_NSS.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	conditionally include libevolution-smime.la.

2003-10-24  Dan Winship  <danw@ximian.com>

	* backend/pas/Makefile.am (libpas_la_LIBADD): libpas should depend
	on libebook, but NOT on libpasfile, etc, since it needs to be
	linked into all backends, not just the wombat.
	(libpasfile_la_LIBADD): depend on libpas.la and libedb3util.la
	(libpasvcf_la_LIBADD): depend on libpas.la
	(libpasldap_la_LIBADD): depend on libpas.la and  $(LDAP_LIBS)

2003-10-23  Dan Winship  <danw@ximian.com>

	* backend/ebook/e-contact.c (e_contact_date_equal): new util func

	* backend/pas/pas-backend-ldap.c (anniversary_compare,
	birthday_compare): Use it

	* backend/pas/pas-backend-summary.c
	(pas_backend_summary_check_contact): Check if an ID exists in the
	summary.

2003-10-23  Chris Toshok  <toshok@ximian.com>

	* tools/Makefile.am: convert 8 spaces to a tab.

	* tools/.cvsignore: ignore evolution-addressbook-abuse and
	evolution-addressbook-clean.

	* gui/component/Makefile.am (libevolution_addressbook_la_LIBADD):
	add libevolution-smime.la.

	* gui/component/component-factory.c (factory): add the certificate
	manager config control stuff here, at least for now.

	* gui/component/GNOME_Evolution_Addressbook.server.in.in: same.

2003-10-23  Rodrigo Moya <rodrigo@ximian.com>

	* gui/component/addressbook-config.c
	(addressbook_dialog_create_source_table): fixed typo in variable name.

2003-10-22  Ettore Perazzoli  <ettore@ximian.com>
