@@ -99,20 +99,20 @@
 		<item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
 	</oaf_attribute>
 
-	<oaf_attribute name="evolution:config_item:title" type="string"
+	<oaf_attribute name="evolution2:config_item:title" type="string"
 		       _value="Directory Servers"/>
 
-	<oaf_attribute name="evolution:config_item:description" type="string"
+	<oaf_attribute name="evolution2:config_item:description" type="string"
 		       _value="Configure access to LDAP directory servers here"/>
 
-	<oaf_attribute name="evolution:config_item:icon_name" type="string"
+	<oaf_attribute name="evolution2:config_item:icon_name" type="string"
 		       value="ldap-settings.png"/>
 
-	<oaf_attribute name="evolution:config_item:type" type="stringv">
+	<oaf_attribute name="evolution2:config_item:type" type="stringv">
 		<item value="contacts/ldap"/>
 	</oaf_attribute>
 
-	<oaf_attribute name="evolution:config_item:priority" type="string" value="-6"/>
+	<oaf_attribute name="evolution2:config_item:priority" type="string" value="-6"/>
     
 	<oaf_attribute name="name" type="string"
 		       _value="Evolution Addressbook LDAP Configuration Control"/>
@@ -127,16 +127,16 @@
                 <item value="IDL:GNOME/Evolution/ConfigControl:1.0"/>
         </oaf_attribute>
                                                                                           
-        <oaf_attribute name="evolution:config_item:title" type="string"
+        <oaf_attribute name="evolution2:config_item:title" type="string"
                        _value="Certificates"/>
                                                                                           
-        <oaf_attribute name="evolution:config_item:description" type="string"
+        <oaf_attribute name="evolution2:config_item:description" type="string"
                        _value="Manager your S/Mime certificates here"/>
                                                                                           
-        <oaf_attribute name="evolution:config_item:icon_name" type="string"
+        <oaf_attribute name="evolution2:config_item:icon_name" type="string"
                        value="pgp-signature-ok.png"/>
                                                                                           
-        <oaf_attribute name="evolution:config_item:priority" type="string" value="-6"/>
+        <oaf_attribute name="evolution2:config_item:priority" type="string" value="-6"/>
                                                                                           
         <oaf_attribute name="name" type="string"
                        _value="Evolution S/Mime Certificate Management Control"/>
